--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "/api/generate_resume",
       "dest": "api/generate_resume.py"
+    },
+    {
+      "src": "/",
+      "dest": "resume.html"
     }
   ]
 }
